--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,20 +47,20 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/samueltim-portfolio:latest
 
-      - name: Deploy to K3s via SSH
+      - name: Deploy to K3s via 
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Setze den Pfad zur Kubeconfig explizit
             export KUBECONFIG=/home/sti/.kube/config
             
-            # Deployment Image aktualisieren
-            # Hinweis: Wir nutzen hier 'frontend' als Container-Namen, da dies der Standard ist.
-            kubectl set image deployment/samueltim-frontend frontend=${{ secrets.DOCKER_USERNAME }}/samueltim-portfolio:latest -n tradingapp
+            # WICHTIG: Hier muss 'samueltim-frontend' statt 'frontend' stehen
+            kubectl set image deployment/samueltim-frontend samueltim-frontend=${{ secrets.DOCKER_USERNAME }}/samueltim-portfolio:latest -n tradingapp
+            
+            # Rollout beobachten
             kubectl rollout status deployment/samueltim-frontend -n tradingapp
-
+            
       - name: Push changes to Repo
         run: git push || echo "Nothing to push"
