--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,12 @@
-name: Sync Thesis & Deploy Portfolio
+name: Deploy samueltim.com
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "17 3 * * *" # Täglich um 03:17 Uhr
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  sync-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,20 +17,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
       - name: Install deps
         run: npm ci
-
-      - name: Sync PDF
-        run: npm run sync:pdf 
-
-      - name: Commit PDF (Optional)
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add public/report.pdf || echo "No PDF found"
-          git diff --quiet && git diff --staged --quiet || git commit -m "chore: sync thesis PDF"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -47,7 +35,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/samueltim-portfolio:latest
 
-      - name: Deploy to K3s via 
+      - name: Deploy to K3s via
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -55,12 +43,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             export KUBECONFIG=/home/sti/.kube/config
-            
+
             # WICHTIG: Hier muss 'samueltim-frontend' statt 'frontend' stehen
             kubectl set image deployment/samueltim-frontend samueltim-frontend=${{ secrets.DOCKER_USERNAME }}/samueltim-portfolio:latest -n tradingapp
-            
+
             # Rollout beobachten
             kubectl rollout status deployment/samueltim-frontend -n tradingapp
-            
-      - name: Push changes to Repo
-        run: git push || echo "Nothing to push"
