--- a/backend/.env
+++ b/backend/.env
@@ -11,4 +11,4 @@ JWT_AUDIENCE=quantraider
 JWT_ACCESS_TTL_MINUTES=10080
 
 # CORS (local frontend dev)
-CORS_ALLOW_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+CORS_ALLOW_ORIGINS=http://localhost:5173,http://127.0.0.1:5173,https://api.samueltim.com,https://samueltim.com
