--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
         with:
           context: .
           push: true
+          build-args: |
+            VITE_BACKEND_URL=https://api.samueltim.com
           tags: ${{ secrets.DOCKER_USERNAME }}/samueltim-portfolio:latest
 
       - name: Build and push Backend Image
